# Core

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  DEPLOY.rst  Dockerfile  Dockerfile-reverse-proxy  INSTALL.ci.rst  INSTALL.dockerhub.rst  INSTALL.github.rst  INSTALL.linux.rst  INSTALL.macos.rst  INSTALL.production.rst  INSTALL.windows.rst  LICENSE  Makefile  README.rst  conftest.py  docker-compose.build.yml  docker-compose.certbot.yml  docker-compose.dev.yml  docker-compose.github.yml  docker-compose.test.yml  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: master.yml  pr.yml
accounts/: constants.py
accounts/migrations/: 0002_account_avatar_account_display_name.py
accounts/models/: account.py
accounts/serializers/: account.py
accounts/views/: account.py
blocks/: apps.py  consumers.py
blocks/migrations/: 0001_initial.py
blocks/models/: block.py
blocks/serializers/: block.py
blocks/views/: block.py
config/: asgi.py  settings.py  urls.py
core/: manage.py
core/accounts/: admin.py  apps.py  constants.py  consumers.py  routing.py  urls.py
core/accounts/migrations/: 0001_initial.py  (+3 more)
core/blocks/: admin.py  apps.py  consumers.py  routing.py  urls.py
core/config/: apps.py  asgi.py  serializers.py  urls.py  wsgi.py
core/core/: authentication.py  constants.py  exceptions.py  managers.py  middleware.py  models.py  serializers.py  validators.py  views.py
core/project/: asgi.py  urls.py  wsgi.py
core/settings/: admin.py  apps.py  models.py  serializers.py  views.py
scripts/: deploy.sh  dockerized-core-run.sh  dockerized-nginx-run.sh  extra-lint.sh
(+57 files in other folders)
