[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["bucky <buckyroberts@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
psycopg2 = "^2.9.3"
django-filter = "^21.1"
channels = "^3.0.4"
channels-redis = "^3.4.0"
django-split-settings = "^1.1.0"
PyYAML = "^6.0"
whitenoise = "^6.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
colorlog = "^6.6.0"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
pytest-xdist = "^2.5.0"
model-bakery = "^1.5.0"
pytest-asyncio = "^0.18.3"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.config.settings"
django_find_project = false
python_files = "test_*.py"
testpaths = ["core"]
filterwarnings = "ignore::DeprecationWarning:^(?!node\\.).*:"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
